Edited: Index1.html

--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>HTML Numero Uno</title>
+        <title>Exercise 1</title>
     </head>
     <body>
 <h1>It All Started with an HTML File!</h1>
