--- a/paragraphs.html
+++ b/paragraphs.html
@@ -6,8 +6,7 @@
     <body>
 <h1>Heading One</h1>
 <p>Here we have a paragraph</p>
-<p>Followed immediately by another</p>
-And then some text outside of a paragraph
+<p>Followed immediately by another</p>And then some text outside of a paragraph
 <h2>Heading Two</h2>
 <h3>Heading Three</h3>
 <h4>Heading Four</h4>
